--- a/src/main/resources/templates/layout/sidebar.html
+++ b/src/main/resources/templates/layout/sidebar.html
@@ -40,6 +40,7 @@
                 <div class="bg-white py-2 collapse-inner rounded">
                     <a class="collapse-item" href="/products">Sản phẩm</a>
                     <a class="collapse-item" href="/ingredients">Nguyên liệu</a>
+                    <a class="collapse-item" href="/quantitative">Định mức</a>
                 </div>
             </div>
         </li>
@@ -53,7 +54,6 @@
                 <div class="bg-white py-2 collapse-inner rounded">
                     <a class="collapse-item" href="/importProducts">Nhập sản phẩm</a>
                     <a class="collapse-item" href="/importingredients">Nhập nguyên liệu</a>
-                    <a class="collapse-item" href="/importingredients">Nhập định mức</a>
                 </div>
             </div>
         </li>
