--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -3,7 +3,7 @@
 
 
 <head>
-    <title>SB Admin 2 - Tables</title>
+    <title>Products</title>
     <th:block th:replace="layout/link.html :: headerLink">
     </th:block>
 
