--- a/src/main/resources/templates/layout/link.html
+++ b/src/main/resources/templates/layout/link.html
@@ -60,7 +60,8 @@
     <script src="/js/report-bill.js"></script>
     <script src="/js/report-product.js"></script>
     <script src="/js/report-ingredient.js"></script>
-    <script src="/js/quantitive.js"></script>
+    <script src="/js/quantitative.js"></script>
+    <script src="/js/report-inventory-ingredient.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/5.5.2/bootbox.min.js"></script>
 
