--- a/src/main/resources/templates/report.html
+++ b/src/main/resources/templates/report.html
@@ -96,7 +96,7 @@
                         </a>
                     </div>
                     <div class="col-md-3">
-                        <a href="/reports/stores">
+                        <a href="/reports/inventories">
                             <div class="card shadow" style="height: 200px; margin-top: 10px;">
                                 <div class="card-body pt-4 pb-4">
                                     <div class="lh-0 mb-4 d-flex justify-content-center" style="width: 100%">
