--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -33,25 +33,25 @@
             <div class="container-fluid">
                 <input type="hidden" id="datetime-hidden-1"/>
                 <input type="hidden" id="datetime-hidden-2"/>
-                <div class="row">
-                    <div class="col-2">
-                        <select id="time-select-1" onchange="pickMonth()" class="custom-select">
-                            <option selected>Chọn tháng</option>
-                            <option value="1">Tháng 1</option>
-                            <option value="2">Tháng 2</option>
-                            <option value="3">Tháng 3</option>
-                            <option value="4">Tháng 4</option>
-                            <option value="5">Tháng 5</option>
-                            <option value="6">Tháng 6</option>
-                            <option value="7">Tháng 7</option>
-                            <option value="8">Tháng 8</option>
-                            <option value="9">Tháng 9</option>
-                            <option value="10">Tháng 10</option>
-                            <option value="11">Tháng 11</option>
-                            <option value="12">Tháng 12</option>
-                        </select>
-                    </div>
-                </div>
+<!--                <div class="row">-->
+<!--                    <div class="col-2">-->
+<!--                        <select id="time-select-1" onchange="pickMonth()" class="custom-select">-->
+<!--                            <option selected>Chọn tháng</option>-->
+<!--                            <option value="1">Tháng 1</option>-->
+<!--                            <option value="2">Tháng 2</option>-->
+<!--                            <option value="3">Tháng 3</option>-->
+<!--                            <option value="4">Tháng 4</option>-->
+<!--                            <option value="5">Tháng 5</option>-->
+<!--                            <option value="6">Tháng 6</option>-->
+<!--                            <option value="7">Tháng 7</option>-->
+<!--                            <option value="8">Tháng 8</option>-->
+<!--                            <option value="9">Tháng 9</option>-->
+<!--                            <option value="10">Tháng 10</option>-->
+<!--                            <option value="11">Tháng 11</option>-->
+<!--                            <option value="12">Tháng 12</option>-->
+<!--                        </select>-->
+<!--                    </div>-->
+<!--                </div>-->
                 <!-- Page Heading -->
                 <div class="d-sm-flex align-items-center justify-content-between mb-4">
                     <h1 class="h3 mb-0 text-gray-800">Trang chủ</h1>
