--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -3,7 +3,7 @@
 
 
 <head>
-    <title>Products</title>
+    <title>Sản phẩm - code-coffee</title>
     <th:block th:replace="layout/link.html :: headerLink">
     </th:block>
 
@@ -356,19 +356,20 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Bạn thực sự muốn rời đi?</h5>
                 <button class="close" type="button" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">×</span>
                 </button>
             </div>
-            <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
+            <div class="modal-body">Chọn đăng xuất để kết thúc phiên làm việc</div>
             <div class="modal-footer">
-                <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                <a class="btn btn-primary" href="login.html">Logout</a>
+                <button class="btn btn-secondary" type="button" data-dismiss="modal">Hủy bỏ</button>
+                <a class="btn btn-primary" href="/login">Đăng xuất</a>
             </div>
         </div>
     </div>
 </div>
+
 
 <th:block th:replace="layout/link.html :: scriptImport">
 </th:block>
