--- a/src/main/resources/templates/report-product.html
+++ b/src/main/resources/templates/report-product.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
-    <title>SB Admin 2 - Tables</title>
+    <title>Báo cáo sản phẩm - code-coffee</title>
     <th:block th:replace="layout/link.html :: headerLink">
     </th:block>
 
