--- a/src/main/resources/templates/order-table.html
+++ b/src/main/resources/templates/order-table.html
@@ -52,7 +52,7 @@
         <li class="nav-item dropdown no-arrow">
             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Nguyễn Thanh Tiến Đạt</span>
+                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Admin</span>
                 <img class="img-profile rounded-circle" src="https://znews-photo.zadn.vn/w660/Uploaded/ohunua2/2017_04_10/duong8.jpg">
             </a>
             <!-- Dropdown - User Information -->
@@ -71,7 +71,7 @@
 <!--                    Activity Log-->
 <!--                </a>-->
 <!--                <div class="dropdown-divider"></div>-->
-                <a class="dropdown-item" href="/logout" data-toggle="modal" data-target="#logoutModal">
+                <a class="dropdown-item" th:href="@{/logout}">
                     <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
                     Đăng xuất
                 </a>
