--- a/src/main/resources/templates/order-table.html
+++ b/src/main/resources/templates/order-table.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="en">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5"
+      lang="en">
 
 <head>
     <title>Trang đặt hàng - code-coffee</title>
@@ -52,7 +53,7 @@
         <li class="nav-item dropdown no-arrow">
             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Admin</span>
+                <span class="mr-2 d-none d-lg-inline text-gray-600 small" sec:authentication="name"></span>
                 <img class="img-profile rounded-circle" src="https://znews-photo.zadn.vn/w660/Uploaded/ohunua2/2017_04_10/duong8.jpg">
             </a>
             <!-- Dropdown - User Information -->
@@ -71,7 +72,7 @@
 <!--                    Activity Log-->
 <!--                </a>-->
 <!--                <div class="dropdown-divider"></div>-->
-                <a class="dropdown-item" th:href="@{/logout}">
+                <a class="dropdown-item" th:href="@{/logout}" data-toggle="modal" data-target="#logoutModal">
                     <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
                     Đăng xuất
                 </a>
@@ -125,7 +126,7 @@
             <div class="modal-body">Chọn đăng xuất để kết thúc phiên làm việc</div>
             <div class="modal-footer">
                 <button class="btn btn-secondary" type="button" data-dismiss="modal">Hủy bỏ</button>
-                <a class="btn btn-primary" href="/login">Đăng xuất</a>
+                <a class="btn btn-primary" th:href="@{/logout}">Đăng xuất</a>
             </div>
         </div>
     </div>
