--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -28,7 +28,7 @@
                                 <div class="text-center">
                                     <h1 class="h4 text-gray-900 mb-4">Chào mừng</h1>
                                 </div>
-                                <form th:action="@{/login}" method="post" class="user">
+                                <form action="/login" method="post" class="user">
                                     <div class="form-group">
                                         <input name="username" type="text" class="form-control form-control-user"
                                                aria-describedby="emailHelp"
