--- a/src/main/resources/templates/order-table.html
+++ b/src/main/resources/templates/order-table.html
@@ -53,13 +53,8 @@
         <li class="nav-item dropdown no-arrow">
             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-<<<<<<< HEAD
                 <span class="mr-2 d-none d-lg-inline text-gray-600 small" sec:authentication="name"></span>
                 <img class="img-profile rounded-circle" src="https://znews-photo.zadn.vn/w660/Uploaded/ohunua2/2017_04_10/duong8.jpg">
-=======
-                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Admin</span>
-                <img class="img-profile rounded-circle" src="https://znews-photo.zadn.vn/w660/Uploaded/ohunua2/2017_04_10/duong8.jpg">\
->>>>>>> 4b93f598bb70707e9a738b84f5572021fe19305d
             </a>
             <!-- Dropdown - User Information -->
             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
@@ -77,7 +72,7 @@
 <!--                    Activity Log-->
 <!--                </a>-->
 <!--                <div class="dropdown-divider"></div>-->
-                <a class="dropdown-item" th:href="@{/logout}" data-toggle="modal" data-target="#logoutModal">
+                <a class="dropdown-item" href="/logout" data-toggle="modal" data-target="#logoutModal">
                     <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
                     Đăng xuất
                 </a>
