--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -131,3 +131,36 @@ a:hover {
     max-height: calc(100vh - 210px);
     overflow-y: auto;
 }
+
+.bg-login-image {
+    background-color: #4e73df;
+    background-image: linear-gradient(
+            180deg, #4e73df 10%, #224abe 100%);
+    background-size: cover;
+
+}
+
+.bg-login-image:after {
+    content: "";
+    background: url("/img/logo-2.png") no-repeat center;
+    background-size: contain;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    max-width: 80%;
+    margin: 0 auto;
+
+}
+
+.bg-login:before {
+    content: "";
+    background: url("https://www.takadada.com/wp-content/uploads/2019/07/hinh-anh-ly-ca-phe-48.jpg");
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    opacity: 0.5;
+}
