--- a/src/main/resources/templates/layout/link.html
+++ b/src/main/resources/templates/layout/link.html
@@ -9,8 +9,8 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
-<!--        <link href="/css/sb-admin-2.min.css" rel="stylesheet">-->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/startbootstrap-sb-admin-2/4.1.3/css/sb-admin-2.min.css"  crossorigin="anonymous" />
+        <link href="/css/sb-admin-2.min.css" rel="stylesheet">
+<!--        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/startbootstrap-sb-admin-2/4.1.3/css/sb-admin-2.min.css"  crossorigin="anonymous" />-->
         <link href="/css/styles.css" rel="stylesheet">
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
