--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -9,12 +9,12 @@
 
 </head>
 
-<body class="bg-gradient-primary">
+<body class="bg-login">
 
-<div class="container">
+<div class="container ">
 
     <!-- Outer Row -->
-    <div class="row justify-content-center">
+    <div class="row justify-content-center align-content-center vh-100">
 
         <div class="col-xl-10 col-lg-12 col-md-9">
 
@@ -22,21 +22,22 @@
                 <div class="card-body p-0">
                     <!-- Nested Row within Card Body -->
                     <div class="row">
-                        <div class="col-lg-6 d-none d-lg-block bg-login-image"></div>
+                        <div class="col-lg-6 d-none d-lg-block bg-login-image bg-gradient-primary"></div>
                         <div class="col-lg-6">
                             <div class="p-5">
                                 <div class="text-center">
-                                    <h1 class="h4 text-gray-900 mb-4">Chào mừng</h1>
+                                    <h1 class="h4 text-gray-900 mb-4">Chào mừng đến với <code class="text-primary">code-coffee</code>
+                                    </h1>
                                 </div>
                                 <form action="/login" method="post" class="user">
                                     <div class="form-group">
                                         <input name="username" type="text" class="form-control form-control-user"
                                                aria-describedby="emailHelp"
-                                               placeholder="Enter Username...">
+                                               placeholder="Tên đăng nhập...">
                                     </div>
                                     <div class="form-group">
                                         <input type="password" name="password" class="form-control form-control-user"
-                                                placeholder="Password">
+                                               placeholder="Mật khẩu">
                                     </div>
                                     <button type="submit" class="btn btn-primary btn-user btn-block">
                                         Đăng nhập
