format money and fix login/logout

--- a/src/main/resources/templates/import-ingredient.html
+++ b/src/main/resources/templates/import-ingredient.html
@@ -157,6 +157,12 @@
             </div>
 
         </div>
+
+        <!-- Footer -->
+        <th:block th:replace="layout/credit.html :: credit">
+        </th:block>
+        <!-- End of Footer -->
+
     </div>
     <!-- End of Content Wrapper -->
 
