--- a/src/main/resources/templates/ingredient.html
+++ b/src/main/resources/templates/ingredient.html
@@ -241,6 +241,11 @@
             </div>
 
         </div>
+        <!-- Footer -->
+        <th:block th:replace="layout/credit.html :: credit">
+        </th:block>
+        <!-- End of Footer -->
+
     </div>
     <!-- End of Content Wrapper -->
 
@@ -252,25 +257,6 @@
     <i class="fas fa-angle-up"></i>
 </a>
 
-<!-- Logout Modal-->
-<div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-     aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Bạn thực sự muốn rời đi?</h5>
-                <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">×</span>
-                </button>
-            </div>
-            <div class="modal-body">Chọn đăng xuất để kết thúc phiên làm việc</div>
-            <div class="modal-footer">
-                <button class="btn btn-secondary" type="button" data-dismiss="modal">Hủy bỏ</button>
-                <a class="btn btn-primary" href="/login">Đăng xuất</a>
-            </div>
-        </div>
-    </div>
-</div>
 
 
 <th:block th:replace="layout/link.html :: scriptImport">
