--- a/src/main/resources/templates/layout/link.html
+++ b/src/main/resources/templates/layout/link.html
@@ -9,8 +9,7 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
-        <link href="/css/sb-admin-2.min.css" rel="stylesheet">
-<!--        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/startbootstrap-sb-admin-2/4.1.3/css/sb-admin-2.min.css"  crossorigin="anonymous" />-->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/startbootstrap-sb-admin-2/4.1.3/css/sb-admin-2.min.css"  crossorigin="anonymous" />
         <link href="/css/styles.css" rel="stylesheet">
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
@@ -56,6 +55,7 @@
             </div>
         </div>
     </div>
+    <!-- End Logout Modal-->
 
 
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
@@ -66,7 +66,6 @@
 
     <script src="https://kit.fontawesome.com/9adb91816f.js" crossorigin="anonymous"></script>
 
-<!--    <script src="/js/sb-admin-2.min.js"></script>-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/startbootstrap-sb-admin-2/4.1.3/js/sb-admin-2.min.js" crossorigin="anonymous"></script>
     <script src="/vendor/datatables/jquery.dataTables.min.js"></script>
     <script src="/vendor/datatables/dataTables.bootstrap4.min.js"></script>
