--- a/src/main/resources/templates/layout/credit.html
+++ b/src/main/resources/templates/layout/credit.html
@@ -11,7 +11,7 @@
     <footer class="sticky-footer bg-white">
         <div class="container my-auto">
             <div class="copyright text-center my-auto">
-                <p>Bản quyền thuộc <code class="text-primary">code-coffee-team</code> 2021</p>
+                <p>&copy; Bản quyền thuộc <code class="text-primary">code-coffee-team</code> 2021</p>
                 <p>Thiết kế bởi <a href="https://startbootstrap.com/theme/sb-admin-2" target="_blank">Start Bootstrap LLC 2020</a></p>
             </div>
         </div>
