--- a/src/main/resources/templates/quantitative.html
+++ b/src/main/resources/templates/quantitative.html
@@ -33,7 +33,7 @@
 
                 <!-- Page Heading -->
                 <div class="d-flex justify-content-between mb-4">
-                    <h1 class=" h3 mb-2 text-gray-800 ">Quản lý sản phẩm</h1>
+                    <h1 class=" h3 mb-2 text-gray-800 ">Quản lý định mức</h1>
                     <div class="d-flex">
                         <a href="javascript:;" onclick="quantitative.addNew()"
                            class="btn btn-outline-primary btn-icon-split">
