--- a/src/main/resources/templates/403.html
+++ b/src/main/resources/templates/403.html
@@ -3,15 +3,10 @@
 
 
 <head>
-    <title>Trang chủ - code-coffee</title>
+    <title>403 - code-coffee</title>
     <th:block th:replace="layout/link.html :: headerLink">
     </th:block>
-    <style>
-        #chartdiv {
-            width: 100%;
-            height: 500px;
-        }
-    </style>
+
 </head>
 
 <body id="page-top">
