--- a/src/main/resources/templates/layout/link.html
+++ b/src/main/resources/templates/layout/link.html
@@ -83,6 +83,7 @@
     <script src="/vendor/datatables/dataTables.bootstrap4.min.js"></script>
     <script src="/js/setAPIurl.js"></script>
 
+    <script src="/js/index.js"></script>
     <script src="/js/product.js"></script>
     <script src="/js/import-product.js"></script>
     <script src="/js/ingredient.js"></script>
@@ -99,8 +100,6 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
     <!-- Page level custom scripts -->
-    <script src="/js/chart-area-demo.js"></script>
-    <script src="/js/chart-pie-demo.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/5.5.2/bootbox.min.js"></script>
 
