--- a/src/main/resources/templates/import-ingredient.html
+++ b/src/main/resources/templates/import-ingredient.html
@@ -102,6 +102,7 @@
                                     </div>
                                     <div class="col-9">
                                         <select class="form-control" name="nameIngredients" id="nameIngredients"></select>
+                                        <small id="err-name-import-ingredients" class="text-danger"></small>
                                     </div>
                                 </div>
 
@@ -113,7 +114,7 @@
                                         <input class="form-control" type="number"
                                                name="price" id="price"
                                                data-rule-required=true>
-                                        <small id="err-price" class="text-danger"></small>
+                                        <small id="err-price-import-ingredients" class="text-danger"></small>
                                     </div>
                                 </div>
 
@@ -125,7 +126,7 @@
                                         <input class="form-control" type="number"
                                                name="quantity" id="quantity"
                                                data-rule-required=true>
-                                        <small id="err-quantity" class="text-danger"></small>
+                                        <small id="err-quantity-import-ingredients" class="text-danger"></small>
                                     </div>
                                 </div>
 
