--- a/src/main/resources/templates/import-product.html
+++ b/src/main/resources/templates/import-product.html
@@ -115,6 +115,7 @@
                                         <input class="form-control" type="text"
                                                name="quantity" id="quantity"
                                                data-rule-required=true>
+                                        <small id="err-quantity-import-product" class="text-danger"></small>
                                     </div>
                                 </div>
 
@@ -126,6 +127,7 @@
                                         <input class="form-control" type="text"
                                                name="price" id="price"
                                                data-rule-required=true>
+                                        <small id="err-price-import-product" class="text-danger"></small>
                                     </div>
                                 </div>
 
