add some validate

--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -189,6 +189,7 @@
                                             <input class="form-control" type="text"
                                                    name="productName" id="productName"
                                                    data-rule-required=true>
+                                            <small id="name-product" class="text-danger"></small>
                                         </div>
                                     </div>
 
@@ -200,6 +201,7 @@
                                             <input class="form-control" type="number"
                                                    name="price" id="price"
                                                    data-rule-required=true>
+                                            <small id="price-product" class="text-danger"></small>
                                         </div>
                                     </div>
                                     <div class="row form-group">
