--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -33,11 +33,11 @@
                                     <div class="form-group">
                                         <input name="username" type="text" class="form-control form-control-user"
                                                aria-describedby="emailHelp"
-                                               placeholder="Tên đăng nhập...">
+                                               placeholder="Tên đăng nhập là 'admin' hoặc 'order'">
                                     </div>
                                     <div class="form-group">
                                         <input type="password" name="password" class="form-control form-control-user"
-                                               placeholder="Mật khẩu">
+                                               placeholder="Mật khẩu mặc định là '1'">
                                     </div>
                                     <button type="submit" class="btn btn-primary btn-user btn-block">
                                         Đăng nhập
